add the ability to output the answer as well
Signed-off-by: JulienBe <bertozzijulien@gmail.com>